lab-2/travel-dashboard-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  name: travel-dashboard
  namespace: travel-control
spec:
  path: /
  port:
    targetPort: http
  tls:
    termination: edge
  to:
    kind: Service
    name: control
    weight: 100
  wildcardPolicy: None
